Fixed alignment of steps

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -101,8 +101,8 @@ a:hover {
 
     .step {
       float: left;
-      width: 30%;
-      margin-right: 3.33%;
+      width: 31%;
+      margin-right: 3.5%;
       
       &:last-child {
         margin-right: 0;
